--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -77,8 +77,9 @@ bind m set-window-option main-pane-height 60\; select-layout main-horizontal
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
-# reload config
+# reload config and edit config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+bind e neww -n tmux-config "\${EDITOR:-vim} ~/.tmux.conf"
 
 # auto window rename
 set-window-option -g automatic-rename
@@ -89,21 +90,24 @@ set -g default-terminal "screen-256color"
 # https://github.com/edkolev/dots/blob/master/tmux.conf
 # Updates for tmux 1.9's current pane splitting paths.
 
-# from powerline
 run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
 run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
+unbind p
+bind p paste-buffer
 if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 4 \)'" 'bind-key -Tcopy-mode-vi v send -X begin-selection; bind-key -Tcopy-mode-vi y send -X copy-selection-and-cancel'
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'bind-key -t vi-copy v begin-selection; bind-key -t vi-copy y copy-selection'
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-selection
 
 # status bar
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
 
 # rm mouse mode fail
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse off'
-    if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
+if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
 
 # fix pane_current_path on new window and splits
 if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind c; bind c new-window -c "#{pane_current_path}"'
@@ -111,3 +115,17 @@ if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 
 if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
 if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
 
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+        | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+        bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+        bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+        bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+        bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+        bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+        bind-key -T copy-mode-vi C-h select-pane -L
+        bind-key -T copy-mode-vi C-j select-pane -D
+        bind-key -T copy-mode-vi C-k select-pane -U
+        bind-key -T copy-mode-vi C-l select-pane -R
+        bind-key -T copy-mode-vi C-\ select-pane -l
