--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -92,28 +92,34 @@ set -g default-terminal "screen-256color"
 
 run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
 run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-unbind p
-bind p paste-buffer
-if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 4 \)'" 'bind-key -Tcopy-mode-vi v send -X begin-selection; bind-key -Tcopy-mode-vi y send -X copy-selection-and-cancel'
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'bind-key -t vi-copy v begin-selection; bind-key -t vi-copy y copy-selection'
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-selection
+bind-key p paste-buffer; 
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
+        "bind-key -t vi-copy v begin-selection; \
+        bind-key -t vi-copy V select-line; \
+        bind-key -t vi-copy r rectangle-toggle; \
+        bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
 
+        if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
+            "bind-key -T copy-mode-vi 'v' send -X begin-selection; \
+            bind-key -T copy-mode-vi 'V' send -X select-line; \
+            bind-key -T copy-mode-vi 'r' send -X rectangle-toggle; \
+            bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
 # status bar
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' 'set-option -g status-utf8 on'
 
 # rm mouse mode fail
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse off'
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' 'set -g mouse off'
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' 'set -g mode-mouse off'
 
 # fix pane_current_path on new window and splits
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind c; bind c new-window -c "#{pane_current_path}"'
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.8" | bc)" = 1 ]' 'unbind c; bind c new-window -c "#{pane_current_path}"'
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.8" | bc)" = 1 ]' "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.8" | bc)" = 1 ]' 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 1.8" | bc)" = 1 ]' 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
