Added tmux option to sort all windows automatically.

--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -29,6 +29,9 @@ set-option -g message-fg colour166 #orange
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 
+# Sort windows automatically
+set-option -g renumber-windows on
+
 # clock
 set-window-option -g clock-mode-colour green #green
 
