Added F2 as the mapping key to toggle the synchronization of the panes.

--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -32,6 +32,9 @@ set-option -g display-panes-colour colour166 #orange
 # Sort windows automatically
 set-option -g renumber-windows on
 
+# Map F2 to toggle the synchronization of panes
+bind-key -n F2 setw synchronize-panes
+
 # clock
 set-window-option -g clock-mode-colour green #green
 
