--- a/ubuntu/sources.yaml
+++ b/ubuntu/sources.yaml
@@ -6,3 +6,10 @@
   sync_back: true
   id: 1
   labels: []
+- !supmua.org,2006-10-01/Redwood/Maildir
+  uri: maildir:/media/minliu/Work/mail/ini/Sent
+  usual: true
+  archived: false
+  sync_back: true
+  id: 2
+  labels: []
