--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -35,6 +35,13 @@ set-option -g renumber-windows on
 # Map F2 to toggle the synchronization of panes
 bind-key -n F2 setw synchronize-panes
 
+# Map prefix with C-l or F3 to load the clipboard to tmux buffer
+# bind-key -T prefix C-l run-shell "xclip -o -sel clip | tmux load-buffer -"
+bind-key -n F3 run-shell "xclip -o -sel clip | tmux load-buffer -"
+
+# Map F4 to load the tmux buffer to clipboard 
+bind-key -n F4 run-shell "tmux show-buffer | xclip -i -sel clip"
+
 # clock
 set-window-option -g clock-mode-colour green #green
 
