Removed the color solution in the .gitconfig. The color solution provided by powerline is beautiful enough.
Former-commit-id: da756f4f890ed400663e65201c5c30225cd3c502

--- a/ubuntu/.gitconfig
+++ b/ubuntu/.gitconfig
@@ -121,26 +121,26 @@
 
 	# Use colors in Git commands that are capable of colored output when
 	# outputting to the terminal. (This is the default setting in Git ≥ 1.8.4.)
-	ui = auto
+    # ui = auto
 
 [color "branch"]
 
-	current = yellow reverse
-	local = yellow
-	remote = green
+    # current = yellow reverse
+    # local = yellow
+    # remote = green
 
 [color "diff"]
 
-	meta = yellow bold
-	frag = magenta bold # line info
-	old = red # deletions
-	new = green # additions
+    # meta = yellow bold
+    # frag = magenta bold # line info
+    # old = red # deletions
+    # new = green # additions
 
 [color "status"]
 
-	added = yellow
-	changed = green
-	untracked = cyan
+    # added = yellow
+    # changed = green
+    # untracked = cyan
 
 [commit]
 
