Added contact file for mutt.
Former-commit-id: be8b0d12e052b647bf441131b0fbdabb705ee3ee

--- a/macOSX/.muttrc
+++ b/macOSX/.muttrc
@@ -245,3 +245,6 @@ set pager_stop
 
 # 使用solarized配色方案
 # source ~/.mutt/mutt-colors-solarized/mutt-colors-solarized-dark-256.muttrc
+
+# source contact file
+source ~/.muttContact
