--- a/macOSX/.tmux.conf
+++ b/macOSX/.tmux.conf
@@ -112,13 +112,13 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
         "bind-key -t vi-copy v begin-selection; \
         bind-key -t vi-copy V select-line; \
         bind-key -t vi-copy r rectangle-toggle; \
-        bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
+        bind -t vi-copy y copy-pipe 'pbcopy'"
 
         if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
             "bind-key -T copy-mode-vi 'v' send -X begin-selection; \
             bind-key -T copy-mode-vi 'V' send -X select-line; \
             bind-key -T copy-mode-vi 'r' send -X rectangle-toggle; \
-            bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
+            bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'pbcopy'"
 # status bar
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' 'set-option -g status-utf8 on'
 
