Changed msmtp trusted certificate folder from /etc/ssl to /usr/local/etc/openssl.
Former-commit-id: 53e6927ba05341780d3f2f1d0c8abc0e013d23e2

--- a/macOSX/.msmtprc
+++ b/macOSX/.msmtprc
@@ -2,7 +2,7 @@
 defaults
 auth             on
 tls              on
-tls_trust_file /etc/ssl/cert.pem
+tls_trust_file /usr/local/etc/openssl/cert.pem
 logfile ~/.mutt/msmtp.log
 
 # ini account
