--- a/ubuntu/.toprc
+++ b/ubuntu/.toprc
@@ -1,14 +1,14 @@
 top's Config File (Linux processes with windows)
-Id:i, Mode_altscr=1, Mode_irixps=1, Delay_time=3.0, Curwin=1
+Id:i, Mode_altscr=1, Mode_irixps=1, Delay_time=3.0, Curwin=2
 Def	fieldscur=¥¨³´»½ÀÄ·º¹Å&')*+,-./012568<>?ABCFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghij
-	winflags=1243444, sortindx=18, maxtasks=0, graph_cpus=1, graph_mems=1
+	winflags=194868, sortindx=18, maxtasks=0, graph_cpus=1, graph_mems=1
 	summclr=2, msgsclr=6, headclr=3, taskclr=2
 Job	fieldscur=¥¦¹·º(³´Ä»½@<§Å)*+,-./012568>?ABCFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghij
-	winflags=1113396, sortindx=0, maxtasks=0, graph_cpus=0, graph_mems=0
+	winflags=64820, sortindx=0, maxtasks=10, graph_cpus=0, graph_mems=0
 	summclr=6, msgsclr=6, headclr=7, taskclr=6
 Mem	fieldscur=¥º»<½¾¿ÀÁMBNÃD34·Å&'()*+,-./0125689FGHIJKLOPQRSTUVWXYZ[\]^_`abcdefghij
 	winflags=195892, sortindx=21, maxtasks=0, graph_cpus=0, graph_mems=0
-	summclr=5, msgsclr=5, headclr=4, taskclr=5
+	summclr=5, msgsclr=5, headclr=6, taskclr=5
 Usr	fieldscur=¥¦§¨ª°¹·ºÄÅ)+,-./1234568;<=>?@ABCFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghij
 	winflags=195892, sortindx=3, maxtasks=0, graph_cpus=0, graph_mems=0
 	summclr=3, msgsclr=3, headclr=2, taskclr=3
