OSX: updated kitty.conf.
Former-commit-id: a340806e31aa1528aeec30f5eccb13a4031472be

--- a/macOSX/.config/kitty/kitty.conf
+++ b/macOSX/.config/kitty/kitty.conf
@@ -216,7 +216,7 @@ font_size 16.0
 
 #: }}}
 
-#: Terminal bell {{{
+Terminal bell {{{
 
 # enable_audio_bell yes
 
@@ -233,7 +233,10 @@ font_size 16.0
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on linux.
 
-# bell_on_tab yes
+bell_on_tab yes
+visual_bell_duration 0.0
+window_alert_on_bell yes
+bell_on_tab yes
 
 #: Show a bell symbol on the tab if a bell occurs in one of the
 #: windows in the tab and the window is not the currently focused
