--- a/macOSX/.tmux.conf
+++ b/macOSX/.tmux.conf
@@ -1,33 +1,36 @@
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
 
-# set window split
-bind-key ^v split-window -h -c "#{pane_current_path}"
-bind-key ^s split-window -c "#{pane_current_path}"
+# default statusbar colors
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
+# set window split
+bind-key ^v split-window -h -c "#{pane_current_path}"
+bind-key ^s split-window -c "#{pane_current_path}"
 
 # Sort windows automatically
 set-option -g renumber-windows on
@@ -39,8 +42,6 @@ bind-key -n F2 setw synchronize-panes
 # bind-key -T prefix C-l run-shell "xclip -o -sel clip | tmux load-buffer -"
 bind-key -n F3 run-shell "xclip -o -sel clip | tmux load-buffer -"
 
-# clock
-set-window-option -g clock-mode-colour green #green
 
 # powerline
 set-option -g status on
@@ -140,9 +141,9 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
         bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
         bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-        bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+        # bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
         bind-key -T copy-mode-vi C-h select-pane -L
         bind-key -T copy-mode-vi C-j select-pane -D
         bind-key -T copy-mode-vi C-k select-pane -U
         bind-key -T copy-mode-vi C-l select-pane -R
-        bind-key -T copy-mode-vi C-\ select-pane -l
+        # bind-key -T copy-mode-vi C-\ select-pane -l
