--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -145,3 +145,25 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         bind-key -T copy-mode-vi C-k select-pane -U
         bind-key -T copy-mode-vi C-l select-pane -R
         bind-key -T copy-mode-vi C-\ select-pane -l
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "arcticicestudio/nord-tmux"
+
+# set -g @plugin 'jimeh/tmux-themepack'
+# set -g @themepack 'basic' 
+# set -g @themepack 'powerline/block/blue'
+# set -g @themepack 'powerline/block/cyan'
+# set -g @themepack 'powerline/default/green'
+# set -g @themepack 'powerline/double/magenta'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
