Set zsh as the default shell of tmux.

--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -3,6 +3,9 @@ set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
+# set default shell as zsh
+set-option -g default-shell /bin/zsh
+
 # set window split
 bind-key ^v split-window -h -c "#{pane_current_path}"
 bind-key ^s split-window -c "#{pane_current_path}"
