--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -110,17 +110,14 @@ run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 # Vi copypaste mode
 set-window-option -g mode-keys vi
 bind-key p paste-buffer; 
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
-        "bind-key -t vi-copy v begin-selection; \
-        bind-key -t vi-copy V select-line; \
-        bind-key -t vi-copy r rectangle-toggle; \
-        bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
 
-        if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-            "bind-key -T copy-mode-vi 'v' send -X begin-selection; \
-            bind-key -T copy-mode-vi 'V' send -X select-line; \
-            bind-key -T copy-mode-vi 'r' send -X rectangle-toggle; \
-            bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi H send -X start-of-line
+bind -T copy-mode-vi L send -X end-of-line
+          
 # status bar
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' 'set-option -g status-utf8 on'
 
